2004-09-14  0.9.8  Roland Clobus <rclobus@bigfoot.com>
	* server/server.c (accept_connection): Used wrong file descriptor, bug
	was introduced in 0.9.6

2005-04-09  0.9.7  Daniel <dgun@umpire.com>
	* server/gnocatan-server.c: When duplicate game titles exist, a number
	is added to the title.

2005-04-09  Yusei <yusei@ragondux.com>
	* crane_island.game: Added a new map

2005-04-09  LT-P <LT-P@LT-P.net>
	* iles.game, coeur.game: Added new maps
	* Evil_square.game: Updated the map

2005-04-09  Blyx <blyx@apshram.net>
	* archipel_gold.game: Added a new map

2005-04-06  Stephen Jacob <sj@sjacob.org>
	* common/gtk/common-gtk.c: Change the text color of player 3's
	messages, since light gray on white is really hard to read.

2005-04-06  0.9.6 Roland Clobus <rclobus@bigfoot.com>
	* configure.ac, common/network.c, common/network.h,
	meta-server/gnocatan-meta-server.c, server/gnocatan-server-console.c,
	server/gnocatan-server.c, server/gnocatan-server.h, server/meta.c,
	server/server.c, server/server.h, server/gtk/gnocatan-server-gtk.c:
	Removed global variables for serverhostname and port. Moved duplicate
	code of server and meta-server to common/network.c. All ports are now
	strings (service names), there are no conversions to integers left.
	Upgraded meta-server protocol to 1.2.
	* rules.make, client/gtk/connect.c, client/gtk/plenty.c,
	client/gtk/quote.c: Added GTK_DISABLE_DEPRECATED for developer-only
	builds. Marked the files that still use deprecated calls.

2005-04-03  Brian Wellington <bwelling@xbill.org>
	* configure.ac, common/Makefile.am, common/map.[ch],
	common/mt_rand.[ch], server/server.c: Remove the old random
	number generator.

2005-04-03  0.9.5  Roland Clobus <rclobus@bigfoot.com>
	* client/ai/greedy.c: AI can use gold (and prefer it) during setup.
	The nosetup nodes are honoured. Year of Plenty will only be played
	when the bank has at least 2 resources left. 

2005-04-02  Brian Wellington <bwelling@xbill.org>